# freshfetch

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
src/: art.rs  build.rs  errors.rs  layout.rs  main.rs  misc.rs
src/assets/: mod.rs
src/assets/ascii_art/: mod.rs
src/assets/defaults/: info.lua  layout.lua  mod.rs
src/info/: battery.rs  bluetooth.rs  context.rs  cpu.rs  de.rs  disk.rs  distro.rs  gpu.rs  host.rs  image.rs  kernel.rs  memory.rs  mod.rs  monitors.rs  motherboard.rs  network.rs  package_managers.rs  resolution.rs  shell.rs  temperature.rs  uptime.rs  utils.rs  wm.rs
src/utils/: dimensions.rs  mod.rs
