[package]
name = "freshfetch"
version = "0.2.0"
authors = ["K4rakara <jack@insertdomain.name>"]
edition = "2021"
build = "./src/build.rs"

[dependencies]
chrono = "0.4.31"

lazy_static = "1.4.0"
regex = "1.3.9"
sysinfo = "0.30.7"
term_size = "0.3.2"
uname = "0.1.1"
users = "0.11.0"
dirs = "4.0.0"
viuer = "0.7.1"
image = "0.24.7"
rayon = "1.8"

[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.mlua]
version = "0.9.9"
features = [ "luajit", "vendored" ]

[build-dependencies.clml_rs]
git = "https://github.com/K4rakara/clml-rs"

